# wound-track-ios

./: .gitignore  CLAUDE.md  LICENSE  README.md
WoundDetector/: Info.plist  project.yml
WoundDetector/Sources/: ContentView.swift  DetectionViewModel.swift  ImagePicker.swift  ModelVariant.swift  StageClassifier.swift  WoundDetectorApp.swift  WoundInfoPanel.swift  WoundStage.swift
WoundDetector/Sources/Capture/: ARCaptureView.swift  AreaCalculator.swift  BooleanMask+CGImage.swift
WoundDetector/Sources/Models/: Assessment.swift  WoundStore.swift
WoundDetector/Sources/Views/: AssessmentDetailView.swift  BodySitePicker.swift  CaptureFlowView.swift  PatientDetailView.swift  PatientListView.swift  WoundDetailView.swift
WoundDetector/Tests/: AreaCalculatorTests.swift  PersistenceTests.swift  WoundStageTests.swift
WoundDetector/WoundDetector.xcodeproj/: project.pbxproj
WoundTrack/: Info.plist  project.yml
WoundTrack/Sources/: ContentView.swift  DetectionViewModel.swift  ModelPickerView.swift  PhotoLibraryPicker.swift  SeedData.swift  WoundTrackApp.swift
WoundTrack/Sources/Capture/: ARCaptureView.swift  (+3 more)
WoundTrack/Tests/: AreaCalculatorTests.swift  PersistenceTests.swift  WoundStageTests.swift
WoundTrack/WoundTrack.xcodeproj/: project.pbxproj
WoundTrack/scripts/: fix-mlpackage-buildphase.py
model-export/: pyproject.toml
wound-segmentation-yolo/: README.md  dataset.yaml  pyproject.toml
wound-segmentation-yolo/scripts/: build_clean_split.py  convert_masks_to_yolo.py  download_roboflow.py  train.py  train_classifier.py  yolo_det_to_imagefolder.py
(+12 files in other folders)
