[project]
name = "wound-segmentation-yolo"
version = "0.1.0"
description = "Train YOLO26-seg on the AZH/FUSeg foot ulcer dataset"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ultralytics>=8.4.34",
    "opencv-python-headless>=4.10",
    "numpy<2.4.0",
    "pillow>=10",
    "torch>=2.7.0,<2.8.0",
    "torchvision>=0.22.0,<0.23.0",
    "roboflow>=1.3.1",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
